[gd_scene load_steps=6 format=3 uid="uid://bsh7r33h36i4h"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_aq52u"]
[ext_resource type="Script" path="res://scenes/events/thief/thief.gd" id="2_rjrk4"]
[ext_resource type="StyleBox" uid="uid://dosxsnv8rmhmx" path="res://scenes/events/event_panel_bg.tres" id="3_hdr5v"]
[ext_resource type="Texture2D" uid="uid://bdrt1pu5di4ds" path="res://scenes/events/thief/thief.jpg" id="4_rjfix"]
[ext_resource type="PackedScene" uid="uid://drjdjumbfief5" path="res://cards/deck/deck_view.tscn" id="5_8ix2e"]

[node name="Thief" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aq52u")
script = ExtResource("2_rjrk4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_hdr5v")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
texture = ExtResource("4_rjfix")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
text = "You meet a hooded man in a dimly lit tavern.

After a few drinks, he leans in to have a better look at your cards, and proceeds to make you an offer.

He offers to source a copy of any card you choose from your deck for a mere 50 drachme."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30
alignment = 1

[node name="PickCardButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Pick Card"

[node name="SkipButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Skip"

[node name="DeckView" parent="." instance=ExtResource("5_8ix2e")]
unique_name_in_owner = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PickCardButton" to="." method="_on_pick_card_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
